--- a/thesis.tex
+++ b/thesis.tex
@@ -121,6 +121,18 @@
 
 	\mainmatter
 
+
+	%\subsection*{2. Naming Conventions and Definitions}
+	%TODO: glossary
+    %    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
+
+	%	\par PoC - Proof of Concept
+	%	\par SLA - Service Level Agreement
+	%	\par Other glossary terms, acronyms and whatever.
+		
+     %   \subsection*{3. Relevant Facts and Assumptions}
+	%	\par N/A - Random stuff that is not put anywhere else, basically
+
 	% final lineup
     \include{introduction}
 	%\include{supplychainproblems}
